# educational-research-agent

./: .gitignore  README.md  app.py  fix_memory_issue.sh  main.py  pyproject.toml
data/vector_store/: metadata.json
data/vector_store/faiss_index/: index.pkl
docs/: Example_Query.md  config.py  test.md
scripts/: build_knowledge_base.py  download_papers.py
src/: __init__.py  config.py  prompts.py
src/agents/: __init__.py  graph.py  nodes.py  state.py
src/knowledge/: __init__.py  loader.py  vector_store.py
src/tools/: __init__.py  academic.py  retriever.py  validator.py  web_search.py
tests/: test_tools.py
